[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[features]
default = ["ansi", "perf", "timeprint"]
ansi = []
derive = []
perf = []
timeprint = []
all = ["ansi", "derive", "perf", "timeprint"]

[dependencies]
chrono = "0.4.31"
util-derive = { path = "./util-derive" }